--- a/app/views/folders/_form.html.erb
+++ b/app/views/folders/_form.html.erb
@@ -15,6 +15,10 @@
     <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
+  <div class="field">
+    <%= f.label :folder %><br />
+    <%= f.select :parent_id, nested_set_options(Folder, @folder) {|i, level| "#{'-' * level} #{i.name}" }, :selected => params[:folder_id]  %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
