--- a/app/views/folders/show.html.erb
+++ b/app/views/folders/show.html.erb
@@ -6,5 +6,6 @@
 </p>
 
 
+<%= link_to 'Add Folder here ...', new_folder_folder_path(:folder_id => @folder.id) %> |
 <%= link_to 'Edit', edit_folder_path(@folder) %> |
 <%= link_to 'Back', folders_path %>
