--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,10 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+<ul>
+<% @descendants.each do |d| %>
+  <% if d.level == 1 %>
+    <li><%= link_to d.name, d %> (<%= link_to 'Edit', edit_folder_path(d) %>)</li>
+  <% end %>
+<% end %>
+<% @root_bookmarks.each do |b| %>
+  <li><%= link_to b.name, b.url %> (<%= link_to 'Edit', edit_bookmark_path(b) %>)</li>
+<% end %>
+</ul>
