--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,3 +8,5 @@
   <li><%= link_to b.name, b.url %> (<%= link_to 'Edit', edit_bookmark_path(b) %>)</li>
 <% end %>
 </ul>
+
+<%= link_to 'Add Folder here ...', new_folder_folder_path(:folder_id => @root.id) %>
