added partials for folders + bookmarks/folders relation

--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :folder %><br />
-    <%= f.text_field :folder %>
+    <%= f.select :folder_id, Folder.all.collect{|fo| [fo.name, fo.id]}, :selected => params[:folder_id] %>
   </div>
   <div class="actions">
     <%= f.submit %>
