--- a/app/views/bookmarks/edit.html.erb
+++ b/app/views/bookmarks/edit.html.erb
@@ -1,6 +1,11 @@
+<% for f in @folder.self_and_ancestors %>
+  <% if f.root? %>
+    <%= link_to 'Home', root_path %> (<%= link_to 'Edit', edit_folder_path(f) %>)
+  <% else %>
+    &gt; <%= link_to f.name, f %> (<%= link_to 'Edit', edit_folder_path(f) %>)
+  <% end %>
+<% end %>
+
 <h1>Editing bookmark</h1>
 
 <%= render 'form' %>
-
-<%= link_to 'Show', @bookmark %> |
-<%= link_to 'Back', bookmarks_path %>
