--- a/app/views/folders/_folder.html.erb
+++ b/app/views/folders/_folder.html.erb
@@ -1,11 +1,16 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>Name:</b>
-  <%= @folder.name %>
-</p>
+<% for f in @folder.self_and_ancestors %>
+  <% if f.root? %>
+    <%= link_to 'Home', root_path %> (<%= link_to 'Edit', edit_folder_path(f) %>)
+  <% else %>
+    &gt; <%= link_to f.name, f %> (<%= link_to 'Edit', edit_folder_path(f) %>)
+  <% end %>
+<% end %>
 
 <ul>
+  <li><%= link_to 'Add Folder here ...', new_folder_folder_path(:folder_id => @folder.id) %></li>
+  <li><%= link_to 'Add Bookmark here ...', new_folder_bookmark_path(:folder_id => @folder.id) %></li>
 <% @descendants.each do |d| %>
   <% if d.level == @folder.level + 1 %>
     <li><%= link_to d.name, d %> (<%= link_to 'Edit', edit_folder_path(d) %>)</li>
@@ -15,8 +20,3 @@
   <li><%= link_to b.name, b.url %> (<%= link_to 'Edit', edit_bookmark_path(b) %>)</li>
 <% end %>
 </ul>
-
-<%= link_to 'Add Folder here ...', new_folder_folder_path(:folder_id => @folder.id) %> |
-<%= link_to 'Add Bookmark here ...', new_folder_bookmark_path(:folder_id => @folder.id) %> |
-<%= link_to 'Edit', edit_folder_path(@folder) %> |
-<%= link_to 'Back', folders_path %>
