--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :folder %><br />
     <%= f.select :folder_id, Folder.all.collect{|fo| [fo.name, fo.id]}, :selected => params[:folder_id] %>
   </div>
+  <div class="field">
+    <%= f.label :tag_list, "Tags (separated by commas)" %><br />
+    <%= f.text_field :tag_list %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
