--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -15,6 +15,10 @@
   <%= @bookmark.folder %>
 </p>
 
+<p>
+  <b>Tags:</b>
+  <%= @bookmark.tags %>
+</p>
 
 <%= link_to 'Edit', edit_bookmark_path(@bookmark) %> |
 <%= link_to 'Back', bookmarks_path %>
