--- a/app/views/folders/_form.html.erb
+++ b/app/views/folders/_form.html.erb
@@ -23,6 +23,9 @@
     <%= f.label :tag_list, "Tags (separated by commas)" %><br />
     <%= f.text_field :tag_list %>
   </div>
+  <div class="field">
+    <%= f.hidden_field :user_id, :value => current_user.id %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
