--- a/app/views/devise/menu/_login_items.html.erb
+++ b/app/views/devise/menu/_login_items.html.erb
@@ -1,6 +1,6 @@
 <% if user_signed_in? %>
   <li>
-  Logged in as <%= current_user.email %>. <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
+  Logged in as <%= current_user.username %>. <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
   </li>
 <% else %>
   <li>
